Trim function added

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,10 +1,10 @@
 CXX = g++
-SOURCES = counter.o iface.o main.cc functions.cc
+SOURCES = counter.o iface.o main.cc
 EXE = main
 KERNEL_VERSION = $(shell uname -r|cut -d. -f 1-2)
 
 ifeq ($(KERNEL_VERSION),2.6)
-  CXXFLAGS+= -DLINUX26
+#  CXXFLAGS+= -DLINUX26
 endif
 
 $(EXE): $(SOURCES)
