M    trunk/counter.cc Some member functions added M    trunk/counter.h Some member functions added M    trunk/main.cc New sample main M    trunk/iface.cc Implemented operator<< overloaded and iface::load M    trunk/iface.h M    trunk/Makefile Added -Wall to CXXFLAGS D    trunk/functions.h

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,17 +1,19 @@
 CXX = g++
+CXXFLAGS += -Wall
 SOURCES = counter.o iface.o main.cc
 EXE = main
 KERNEL_VERSION = $(shell uname -r|cut -d. -f 1-2)
 
 ifeq ($(KERNEL_VERSION),2.6)
-  CXXFLAGS+= -DLINUX26
+  CXXFLAGS += -DLINUX26
 endif
+
+.PHONY: all clean
+
+all: $(EXE)
+
+clean: 
+	${RM} $(EXE) *.o
 
 $(EXE): $(SOURCES)
 	$(CXX) $(CXXFLAGS) $^ -o $@
-
-
-.PHONY: all clean
-all: $(EXE)
-clean: 
-	${RM} $(EXE) *.o
